Make the Schematron Association URL based